# rust-wasm-base64-interaction

./: Readme.md
base64-helper/: Cargo.toml
base64-helper/src/: lib.rs
guest-module/: Cargo.toml  Makefile
guest-module/src/: lib.rs
module-host/: Cargo.toml
module-host/src/: guest_module_base64.wasm  guest_module_singleval.wasm  main.rs
